Fix extra space under the carousel

--- a/packages/dope/assets/less/site/layout.less
+++ b/packages/dope/assets/less/site/layout.less
@@ -11,7 +11,6 @@
 
 .home-template {
   .site-content {
-    height: 100vh;
     padding-top: 0;
   }
 
